Marcus - Refatorando default adicionando caminho para cargo-listar

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -17,7 +17,7 @@
 	</div>
 	<div class="ct-menu">
 		<ul>
-			<li><h:link outcome="pretty:cargo" >#{message['title.cargo']}</h:link></li>
+			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>
 			<li><h:link outcome="pretty:modulo" >#{message['title.modulo']}</h:link></li>
 			<li><h:link outcome="pretty:submodulo">#{message['title.submodulo']}</h:link></li>
 			<li><h:link outcome="pretty:usuario">#{message['title.usuarios']}</h:link></li>
