--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -20,7 +20,7 @@
 			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>
 			<li><h:link outcome="pretty:modulo" >#{message['title.modulo']}</h:link></li>
 			<li><h:link outcome="pretty:submodulo">#{message['title.submodulo']}</h:link></li>
-			<li><h:link outcome="pretty:equipe">#{message['title.equipe']}</h:link></li>
+			<li><h:link outcome="pretty:equipe">#{message['title.equipes']}</h:link></li>
 			<li><h:link outcome="pretty:timer">Teste Louco</h:link></li>
 			<li class="item-last"><a href="#">Indisponível</a></li>
 		</ul>
