--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -15,11 +15,14 @@
 	<div class="ct-top">
 		<div class="container--topmenu">
 			<div class="cabecalho">
-				<h1>#{app['title.default']}</h1>
+				<div class="img-logo"></div>
+				<p:clock id="horario" pattern="HH:mm:ss" mode="server" />
+				<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
+				<a href="topo" name="topo"/>
 			</div>
 		</div>
 	</div>
-	<div class="ct-menu">
+	<div class="ct-menu" name="menu">
 		<ul>
 			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>
 			<li><h:link outcome="pretty:cargaHoraria">#{message['title.cargahoraria']}</h:link></li>
@@ -30,6 +33,15 @@
 	</div>
 	<div class="ct-content" >
 		<ui:insert name="content" />
+	</div>
+	<div class="ct-bottom">
+		<div class="rodape">
+			<div class="rodape-descricao">
+				<h1>2015 - Stefanini - Todos os direitos Reservados</h1>
+				<h2>SGR STEFANINI</h2>
+			</div>
+			<p:commandButton icon="fa-chevron-up" type="button" href="#"/>
+		</div>		
 	</div>
 </h:body>
 </html>
