--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -62,31 +62,34 @@ html, body {
 }
 
 .ct-top h1 {
-	margin: 18px 0 0 20px;
 	font-size: 18px;
 	color: #FFF;
 }
 
 .cabecalho {
-    margin-left: 230px;
-    background-color: #ddd;
-    width: 73%;
-    height: 100%;
+    margin: auto;
+	width: 85%;
+	height: 100%;
 }
 .container--topmenu {
     background-color: rgb(255, 255, 255);
     height: 115px;
+    margin-top: 10px;
+}
+
+#horario{
+	margin-left:200px
 }
 
 /* MENU */
 .ct-menu {
-    width: 75%;
+    width: 70%;
     height: 25px;
     z-index: 80;
     position: absolute;
-    top: 144px;
+    top: 140px;
     color: #FFF;
-    left: 215px;
+    left: 120px;
 }
 
 .ct-menu ul {
@@ -114,6 +117,28 @@ html, body {
 
 .ct-menu ul li.item-last {
 	border: none;
+}
+
+.img-logo {
+    width: 250px;
+    height: 80px;
+    background-image: url("../img/logo.jpg");
+    float: left;
+    margin-top: 20px;
+}
+
+.ui-clock{
+	position: absolute;
+	top: 55px;
+	margin-left: 55px;
+	background-color:#fff;
+	border:none;
+} 
+
+.ui-breadcrumb{
+	position: absolute;
+    right: 230px;
+    top: 135px;
 }
 
 /* PRIME */
@@ -182,4 +207,35 @@ input[type=text] {
 
 .largura-acoes {
 	width: 230px;
+}
+
+/*Rodape*/
+.ct-bottom{
+    bottom: 0;
+    position: absolute;
+    color: #fff;
+    background-color: #201B55;
+    width: 100%;
+    height: 20px;
+    padding: 10px;
+}
+
+.rodape{
+    margin: auto;
+    width: 80%;
+}
+
+.rodape-descricao H1,
+.rodape-descricao h2{
+	display:inline;
+}
+
+.rodape-descricao h2{
+    margin-left: 100px;
+}
+
+.rodape .ui-button-icon-only{
+	display: inline;
+    float: right;
+    bottom: 20px;
 }
