--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -17,35 +17,23 @@
 			<div class="cabecalho">
 				<div class="img-logo"></div>
 				<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
-				<p:clock id="horario" pattern="HH:mm:ss" mode="server" />				
-				<a href="#topo" name="topo"/>
+				<p:clock id="horario" pattern="HH:mm:ss" mode="server" />	
 			</div>
 		</div>
 	</div>
-	<div class="ct-menu" name="menu">
+	<div class="ct-menu">
 		<ul>
 			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>
-			<li><h:link outcome="pretty:cargaHoraria">#{message['title.cargahoraria']}</h:link></li>
-			<li><h:link outcome="pretty:modulo" >#{message['title.modulo']}</h:link></li>
+			<li><h:link outcome="pretty:cargaHoraria">#{message['title.cargaHoraria']}</h:link></li>
+			<li><h:link outcome="pretty:celula" >#{message['title.celula']}</h:link></li>
 			<li><h:link outcome="pretty:equipe">#{message['title.equipes']}</h:link></li>
-			<li class="item-last"><a href="#">Indisponível</a></li>
+			<li  class="item-last"><h:link outcome="pretty:equipe">#{message['title.profissional']}</h:link></li>
 		</ul>
-	</div>
+	</div>	
 	<div class="container">
 		<div class="ct-content" >
 			<ui:insert name="content" />
 		</div>
-	</div>
-	<div class="ct-bottom">
-		<div class="rodape">
-			<div class="rodape-descricao">
-				<h1>2015 - Stefanini - Todos os direitos Reservados</h1>
-				<h2>SGR STEFANINI</h2>
-			</div>
-			<p:commandButton icon="fa-chevron-up" type="button">
-				<a href="#top"/>
-			</p:commandButton>
-		</div>		
 	</div>
 </h:body>
 </html>
