--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -23,11 +23,14 @@
 	</div>
 	<div class="ct-menu">
 		<ul>
-			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>
 			<li><h:link outcome="pretty:cargaHoraria">#{message['title.cargaHoraria']}</h:link></li>
-			<li><h:link outcome="pretty:celula" >#{message['title.celula']}</h:link></li>
+			<li><h:link outcome="pretty:cargo" >#{message['title.cargos']}</h:link></li>			
+			<li><h:link outcome="pretty:celula">#{message['title.celulas']}</h:link></li>
 			<li><h:link outcome="pretty:equipe">#{message['title.equipes']}</h:link></li>
-			<li  class="item-last"><h:link outcome="pretty:equipe">#{message['title.profissional']}</h:link></li>
+			<li><h:link outcome="pretty:formaContratacao">#{message['title.formaContratacao']}</h:link></li>
+			<li><h:link outcome="pretty:perfil">#{message['title.perfis']}</h:link></li>
+			<li><h:link outcome="pretty:perfilStefanini">#{message['title.perfilStefanini']}</h:link></li>
+			<li  class="item-last"><h:link outcome="pretty:profissional">#{message['title.profissional']}</h:link></li>
 		</ul>
 	</div>	
 	<div class="container">
