Caminho de pão ok

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -15,7 +15,7 @@
 	<div class="ct-top">
 		<div class="container--topmenu">
 			<div class="cabecalho">
-				<div class="img-logo"></div>
+				<a href="#"><div class="img-logo"></div></a>
 				<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
 				<p:clock id="horario" pattern="HH:mm:ss" mode="server" />	
 			</div>
