--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -15,9 +15,17 @@
 	<div class="ct-top">
 		<div class="container--topmenu">
 			<div class="cabecalho">
-				<a href="#"><div class="img-logo"></div></a>
-				<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
-				<p:clock id="horario" pattern="HH:mm:ss" mode="server" />	
+				<a href="#">
+					<div class="img-logo"></div>
+				</a>
+				<div class="calendario-data">
+					<h:graphicImage value="/resources/img/calendar.png" height="20px" width="20px" />
+					<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
+				</div>
+				<div class="relogio-hora">
+					<h:graphicImage value="/resources/img/clock.png" height="20px" width="20px" />
+					<p:clock id="horario" pattern="HH:mm:ss" mode="server"/>
+				</div>
 			</div>
 		</div>
 	</div>
