--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -10,6 +10,8 @@
 	<title>#{app.title}</title>
 	<base href="#{request.contextPath}/" />
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+	
+	<h:outputScript library="js" name="js.js"></h:outputScript>
 </h:head>
 <h:body>
 	<div class="ct-top">
