--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -18,7 +18,7 @@
 		<div class="container--topmenu">
 			<div class="cabecalho">
 				<a href="#">
-					<div class="img-logo"></div>
+					<div class="img-logo"/>
 				</a>
 				<div class="calendario-data">
 					<h:graphicImage value="/resources/img/calendar.png" height="20px" width="20px" />
