painel de relátorio

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -41,7 +41,8 @@
 			<li><h:link outcome="pretty:perfil">#{message['title.perfis']}</h:link></li>
 			<li><h:link outcome="pretty:perfilStefanini">#{message['title.perfilStefanini']}</h:link></li>
 			<li><h:link outcome="pretty:profissional">#{message['title.profissional']}</h:link></li>
-			<li  class="item-last"><h:link outcome="pretty:status">#{message['title.status']}</h:link></li>
+			<li><h:link outcome="pretty:status">#{message['title.status']}</h:link></li>
+			<li  class="item-last"><h:link outcome="pretty:relatorio">#{message['title.relatorio']}</h:link></li>			
 		</ul>
 	</div>	
 	<div class="container">
