--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -21,11 +21,11 @@
 					<img class="img-logo"/>
 				</a>
 				<div class="calendario-data">
-					<h:graphicImage value="/resources/img/calendar.png" height="20px" width="20px" />
+					<h:graphicImage value="/resources/img/calendar.png" styleClass="date-time-icon"/>
 					<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
 				</div>
 				<div class="relogio-hora">
-					<h:graphicImage value="/resources/img/clock.png" height="20px" width="20px" />
+					<h:graphicImage value="/resources/img/clock.png" styleClass="date-time-icon"/>
 					<p:clock id="horario" pattern="HH:mm:ss" mode="server"/>
 				</div>
 			</div>
