--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -156,7 +156,10 @@ html, body {
     margin-top: 30px;
 }
 
-
+.date-time-icon{
+	height: 20px;
+	width: 20px;
+}
 
 .ui-breadcrumb{
 	position: absolute;
