--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -20,6 +20,9 @@
 				<a href="#">
 					<img class="img-logo"/>
 				</a>
+				<div class="nome-sistema">
+					<h1>S.G.R</h1>
+				</div>
 				<div class="calendario-data">
 					<h:graphicImage value="/resources/img/calendar.png" styleClass="date-time-icon"/>
 					<p:clock id="calendario" pattern="dd.MM.yyyy" mode="server" />
