Menu nome do sistema

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -92,10 +92,10 @@ html, body {
 .nome-sistema h1{
     position: absolute;
     left: 23%;
-    top: 8%;
-    text-shadow: 0.1em 0.1em 0.2em #000;
+    top: 34px;
+    text-shadow: 2px 2px 2px #082C2F;
     font-size: 60px;
-    color: rgb(51, 51, 51);
+    color: #0052A4;
 }
 
 .calendario-data{
