--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -67,14 +67,15 @@ html, body {
 }
 
 .btn-menu .ui-state-default{
-	background-color: #fff;
-	background-image: none;
-	color:#333;
+	background-image: linear-gradient(to right, rgb(115, 177, 100), rgb(87, 170, 118));
+	color: rgb(255, 255, 255);
+	border: medium none;
+	box-shadow: none;
+	border-radius: 0;
+	text-shadow: none;
 }
 
 .btn-menu .ui-state-default:hover{
-	background-color: #ddd;
-	color:#333;
 }
 
 .cabecalho {
@@ -131,32 +132,24 @@ html, body {
     height: 25px;
     z-index: 80;
     position: absolute;
-    top: 133px;
+    top: 137px;
     color: #FFF;
     left: 7.5%;
 }
 
 .ct-menu ul {
 	float: left;
-	margin-left: 20px;
-	margin-top: 6px;
 }
 
-.ct-menu ul li {
-	float: left;
-	padding-right: 20px;
-	margin-right: 20px;
-	border-right: 3px solid #FFF;
-}
 
 .ct-menu ul li a {
     text-decoration: none;
-    color: #FFF;
     font-weight: 600;
     font-size: 12px;
 }
+
 .ct-menu ul li a:hover{
-	color:#fff;	
+	color:#bbb;
 	text-decoration: underline;	
 }
 
@@ -388,3 +381,77 @@ input[type=text] {
 .pesquisa{
 	margin-bottom: 15px;
 }
+
+
+/*TESTE*/ 
+
+ 
+/*----- Menu Outline -----*/
+.menu a {
+    transition:all linear 0.15s;
+    color:#fff;
+}
+
+.ct-menu .sub-menu ul li a{
+	color:#333;
+}
+ 
+.menu li:hover > a, .menu .current-item > a {
+    text-decoration:none;
+    color:#ddd;
+}
+ 
+.menu .arrow {
+    font-size:11px;
+    line-height:0%;
+}
+ 
+/*----- Top Level -----*/
+.menu > ul > li {
+    float:left;
+    display:inline-block;
+    position:relative;
+    font-size:19px;
+}
+ 
+.menu > ul > li > a {
+    padding:10px 40px;
+    display:inline-block;
+}
+ 
+.menu > ul > li:hover > a, .menu > ul > .current-item > a {
+    background-color: #FFF ;
+	color: #333;
+}
+ 
+/*----- Bottom Level -----*/
+.menu li:hover .sub-menu {
+    z-index:1;
+    opacity:1;
+}
+ 
+.sub-menu {
+    width:160%;
+    padding:5px 0px;
+    position:absolute;
+    top:100%;
+    left:0px;
+    z-index:-1;
+    opacity:0;
+    transition:opacity linear 0.15s;
+    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
+    background:#fff;
+}
+ 
+.sub-menu li {
+    display:block;
+    font-size:16px;
+}
+ 
+.sub-menu li a {
+    padding:10px 30px;
+    display:block;
+    color: #333;
+}
+ 
+
