--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -39,25 +39,25 @@
 	<div class="ct-menu">
 		<div class="menu">
 			<ul class="clearfix">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Cadastros<span class="arrow">&#9660;</span></a>
+				<li><a href="#"  class="menu-categoria">Home</a></li>
+				<li><a href="#"  class="menu-categoria">Cadastros<span class="arrow">&#9660;</span></a>
 					<ul class="sub-menu">
-						<li><h:link outcome="pretty:profissional">#{message['title.profissional']}</h:link></li>
+						<li><h:link outcome="pretty:profissional" styleClass="submenu-categoria">#{message['title.profissional']}</h:link></li>
 						<p:separator />
-						<li><h:link outcome="pretty:cargaHoraria">#{message['title.cargaHoraria']}</h:link></li>
-						<li><h:link outcome="pretty:cargo">#{message['title.cargos']}</h:link></li>
-						<li><h:link outcome="pretty:celula">#{message['title.celulas']}</h:link></li>
-						<li><h:link outcome="pretty:equipe">#{message['title.equipes']}</h:link></li>
-						<li><h:link outcome="pretty:formaContratacao">#{message['title.formaContratacao']}</h:link></li>
-						<li><h:link outcome="pretty:perfil">#{message['title.perfis']}</h:link></li>
-						<li><h:link outcome="pretty:perfilStefanini">#{message['title.perfilStefanini']}</h:link></li>
-						<li class="item-last"><h:link outcome="pretty:status">#{message['title.status']}</h:link></li>
+						<li><h:link outcome="pretty:cargaHoraria" styleClass="submenu-categoria">#{message['title.cargaHoraria']}</h:link></li>
+						<li><h:link outcome="pretty:cargo" styleClass="submenu-categoria">#{message['title.cargos']}</h:link></li>
+						<li><h:link outcome="pretty:celula" styleClass="submenu-categoria">#{message['title.celulas']}</h:link></li>
+						<li><h:link outcome="pretty:equipe" styleClass="submenu-categoria">#{message['title.equipes']}</h:link></li>
+						<li><h:link outcome="pretty:formaContratacao" styleClass="submenu-categoria">#{message['title.formaContratacao']}</h:link></li>
+						<li><h:link outcome="pretty:perfil" styleClass="submenu-categoria">#{message['title.perfis']}</h:link></li>
+						<li><h:link outcome="pretty:perfilStefanini" styleClass="submenu-categoria">#{message['title.perfilStefanini']}</h:link></li>
+						<li class="item-last"><h:link outcome="pretty:status" styleClass="submenu-categoria">#{message['title.status']}</h:link></li>
 					</ul></li>
-				<li><a href="#">Relatorios<span class="arrow">&#9660;</span></a>
+				<li><a href="#" class="menu-categoria">Relatorios<span class="arrow">&#9660;</span></a>
 					<ul class="sub-menu">
 						<li><span>#{message['title.relatorio.equipe']}</span></li>
 						<p:separator />
-						<li class="item-last"><h:link outcome="pretty:relatorio">#{message['title.relatorio.profissional.equipe']}</h:link></li>
+						<li class="item-last" styleClass="submenu-categoria"><h:link outcome="pretty:relatorio">#{message['title.relatorio.profissional.equipe']}</h:link></li>
 					</ul></li>
 			</ul>
 		</div>
