Inserção do relatorio

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -67,8 +67,10 @@
 					<ul class="sub-menu">
 						<li><span>#{message['title.relatorio.equipe']}</span></li>
 						<p:separator />
+						<li><h:link
+								outcome="pretty:relatorioProfissional">#{message['title.relatorio.profissional.equipe']}</h:link></li>
 						<li class="item-last submenu-categoria"><h:link
-								outcome="pretty:relatorio">#{message['title.relatorio.profissional.equipe']}</h:link></li>
+								outcome="pretty:relatorioContratacao">#{message['title.relatorio.forma.contratacao']}</h:link></li>
 					</ul></li>
 			</ul>
 		</div>
